<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".activities.JobActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/logo_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/image_content_desc"
            tools:ignore="InefficientWeight" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/job_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:text="@string/job_title_text"/>

            <TextView
                android:id="@+id/job_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/job_company_text"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/job_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:text="@string/job_type_text"/>

            <TextView
                android:id="@+id/job_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:text="@string/job_location_text"/>

            <TextView
                android:id="@+id/job_post_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:text="@string/job_post_date"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/job_button_text"
            android:onClick="openJobDescription"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_button_text"
            android:onClick="openCompanyWebsite"/>

    </LinearLayout>

</RelativeLayout>